<resources>
    <string name="app_name">HNail</string>
    <string name="server_client_id">1080947652501-grbhi8oub804ipinf5pu5pu60jcsn9ll.apps.googleusercontent.com</string>
    <string name="google_maps_key">AIzaSyAQkapwcA3J6O-t82T6sL--AnSMrtVtL5s</string>
    <string name="facebook_app_id">2258438611059431</string>
    <string name="fb_login_protocol_scheme">fb2258438611059431</string>
    <string name="button_fb">Login with Facebook</string>
    <string name="button_google">Login with G+</string>
    <string name="input_first_name">First Name</string>
    <string name="input_last_name">Last Name</string>
    <string name="input_email">Email Adress</string>
    <string name="input_password">Password</string>
    <string name="input_password_confirm">Confirm Password</string>
    <string name="or">-OR-</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have a HNAI Account?</string>
    <string name="password_confirm_is_not_true">Password confirm is not true</string>
    <string name="gmail">GMAIL</string>
    <string name="facebook">FACEBOOK</string>
    <string name="password_not_match">Password not match</string>
    <string name="sign_in_underline"><u>Sign In</u></string>
    <string name="sign_up_successfully">Sign up successfully.\n Please use your account to login into the app</string>
    <string name="input_phone">Phone number</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="dont_have_account">Don\'t have an account?  </string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="text_verify1">Please enter your phone number so we can verify your account and
        connect you with our trusted technician</string>
    <string name="text_verify2">Please enter the 4-digital code send to you at</string>
    <string name="text_the_code_will_expire">The code will expire in 2 mins</string>
    <string name="text_dont_receive_a_sms">Don\'t receive a SMS? Resend</string>
    <string name="text_invalid_verification_code">Invalid cerification code!</string>
    <string name="button_continue">Continue</string>
    <string name="button_verify">Verify</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="content_forgot_password">Enter your phone number in the field below to receive your valication code</string>
    <string name="send_validation_code">Send Validation Code</string>
    <string name="well_send_you_a_code">We\'ll send you a code to reset your \n Password at</string>
    <string name="new_password_setting">New Password Setting</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="successfully">Successfully!</string>
    <string name="password_updated_successfully">Password updated successfully.\n Please use your new password to login into the app</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="my_appointment">My Appointment</string>
    <string name="term_of_use">Term of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="faqs">FAQs</string>
    <string name="customer_support">Customer Support</string>
    <string name="log_out">Log Out</string>
    <string name="book_service">Book Service</string>
    <string name="book_family_service">Book Family Service</string>
    <string name="rebook_technician">Rebook Technician</string>
    <string name="a_hnail_service_for_one_people">A HNail service for one people</string>
    <string name="a_hnail_service_for_two_people">A HNail service for two people with two technicians</string>
    <string name="request_a_technician_from_one">Request a Technician from one of your previous Technician</string>
    <string name="just_a_few_taps">Just a few Taps, We do the rest.</string>
    <string name="manicure">Manicure</string>
    <string name="pedicure">Pedicure</string>
    <string name="packages">Packages</string>
    <string name="add_on">Add on</string>
    <string name="regular_polish_classic">Regular Polish - Classic</string>
    <string name="approx_15mins_remove_nail">(Approx. 15mins): Remove nail polish, shaping &amp; buffing, cuticle care, polish of your choice.</string>
    <string name="regular_polish_deluxe">Regular Polish - Deluxe</string>
    <string name="total">Total $</string>
    <string name="confirm">Confirm</string>
    <string name="do_you_want_to_leave">Do you want to leave? Your booking data will be lose.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_manicure_gel_olor">Choose Manicure Gel Color</string>
    <string name="choose_pedicure_gel_olor">Choose Pedicure Gel Color</string>
    <string name="use_my_own_color">Use my own color</string>
    <string name="choose_technician_gender">Choose Technician Gender</string>
    <string name="choose_date_time">Choose Date/Time</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="either">Either</string>
    <string name="choose_your_location">Choose your Location</string>
    <string name="instruction_parking">Instruction Parking</string>
    <string name="where_should_we_park">Where should we park?\nWhat is your entrance code?\nHotel name? Room Number?\nPet?</string>
    <string name="billing_address">Billing Address</string>
    <string name="gift_code">Gift Code</string>
    <string name="zip_code">Zip code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="same_as_appointment">Same as appointment</string>
    <string name="apt">Apt#</string>
    <string name="card_number">Card number</string>
    <string name="use_different_card"><u>Use different Card</u></string>
    <string name="address">Address</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="your_card_wont_be_changed">Your card won’t be changed until your appointment is completed. You can cancel your appointment at any time. Terms Apply.</string>
    <string name="gift_code_value">Gift Code Value</string>
    <string name="services">Services</string>
    <string name="your_request_is_now_being_processed">Your request is now being processed. Please wait a moment for our technician confirm your appointment.</string>
    <string name="appointment_requested">Appointment requested</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="reschedule_appointment">Reschedule Appointment</string>
    <string name="appointment_detail">Appointment Detail</string>
    <string name="are_you_sure_to_eschedule_appointment">Are you sure to Reschedule appointment?</string>
    <string name="reschedule">Reschedule</string>
    <string name="none"> </string>
    <string name="how_was_the_service">How was the Service?</string>
    <string name="your_feedback_will_help_imporve_us_better">Your Feedback will help imporve us better</string>
    <string name="tell_us">Tell us</string>
    <string name="how_does_hnail_work">How does HNail work?</string>
    <string name="how_do_i_make_an_appointment">How do I make an appointment?</string>
    <string name="how_do_i_pay">How do I pay?</string>
    <string name="hnail_help_you_book_a_five_star">Hnail help you book a Five star nail Salon to you home, Hotel, Office or Event.</string>
    <string name="login_to_your_account">Login to your account and select a service. From there, you will be guided through choosing a style and price point, providing your location information, and roviding payment information (which is securely stored). Then sit back and wait for your technician to arrive.</string>
    <string name="all_payment_is_made">All payment is made via credit card through a 3rd party processing system and no cash is exchanged between technician and client. Upon finish apointment, it will auto charge the service amount to your credit card.</string>
    <string name="donec_tristique_turpis">Donec tristique turpis orci, et euismod lectus tempor vitae. Curabitur egestas dui ac pharetra gravida. Morbi tempor mi rhoncus ipsum lobortis lacinia. In vulputate massa sodales, sodales nulla sed, pretium justo. Duis enim nisi, faucibus sit amet mattis vel, varius vel est. Praesent tincidunt velit sed erat congue, eu pharetra est fringilla.</string>
    <string name="aliquam_consectetur_lacus">Aliquam consectetur lacus et urna semper fringilla. Sed vitae pharetra urna. Vivamus quis nunc nulla. Cras cursus augue in vestibulum sollicitudin. Nunc sit amet risus justo. Nullam pretium orci quis justo ullamcorper tempus. Donec tempus sit amet tortor ut rutrum. </string>
    <string name="need_some_help">Need some help?</string>
    <string name="please_contact_us_at">Please contact us at</string>
    <string name="phone_support">818-189-3995</string>
    <string name="email_support">support@bookhnail.com</string>
    <string name="two_minutes">2 minutes ago</string>
    <string name="sat_19_may_2018_ppointment">Sat 19 May 2018 Appointment</string>
    <string name="thank_you_i_hope_that">Thank you! I hope that you enjoy and satisfied with our service. Please give us good feedback and continue support Hnail.</string>
    <string name="your_tech_is_on_the_way">Your Tech is on the way</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="skip">Skip</string>
    <string name="please_give_us_your_feedback">Please give us your feedback</string>
    <string name="technician_rating">Technician rating:</string>
    <string name="your_feedback">Your feedback:</string>
    <string name="submit_your_feedback">Submit Your Feedback</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="location">Location</string>
    <string name="credit_card">Credit card*</string>
    <string name="change"><u>Change</u></string>
    <string name="edit">Edit</string>
    <string name="update_payment">Update Payment</string>
    <string name="payment">Payment</string>
    <string name="this_card_will_be_used">This card will be used for all future payments.</string>
    <string name="update_info">Update Info</string>
    <string name="update_profile">Update Profile</string>
    <string name="personal_info">Personal Info</string>
    <string name="change_location">Change Location</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password_">New password</string>
    <string name="new_password_confirmation">New password confirmation</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="you_dont_have_any_completed">You don’t have any completed appointments yet. Press <b>BOOK NOW</b> button below to get started</string>
    <string name="book_now">BOOK NOW</string>
    <string name="technician_info">Technician’s Info</string>
    <string name="reviews">Reviews</string>
    <string name="years_exp">years exp</string>
</resources>