<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feature.main.SignInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/welcome_back"
            android:textSize="36sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/input_phone"
            android:hint="@string/input_phone"
            android:gravity="center"
            android:inputType="number"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/input_password"
            android:hint="@string/input_password"
            android:gravity="center"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <Button
            android:id="@+id/button_sign_in"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/shape_button_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="-OR-" />

        <include
            layout="@layout/button_fb"
            android:id="@+id/button_fb"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp" />

        <include
            layout="@layout/button_g"
            android:id="@+id/button_g"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account" />

            <TextView
                android:id="@+id/text_sign_up"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>