<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/round_corners_gradient_green"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/confirm"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/darkGreyBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:alpha="0.2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/darkGreyBlue"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/text_content_dialog"
        android:gravity="center"
        android:text="@string/do_you_want_to_leave"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_no"
            android:text="@string/no"
            android:layout_marginRight="10dp"
            style="@style/ButtonDarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_yes"
            android:text="@string/yes"
            android:layout_marginLeft="10dp"
            style="@style/ButtonRedGradient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>