<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feature.password.NewPasswordSettingActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/layout_new_password"
        android:alpha="0.5"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_new_password"
                android:hint="@string/new_password"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_confirm_new_password"
                android:hint="@string/confirm_new_password"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text_password_not_match"
            android:visibility="invisible"
            android:text="@string/password_not_match"
            android:gravity="center"
            android:textColor="@color/colorTextError"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_sumbit"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            style="@style/ButtonRedGradient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>